# hipace

./: .clang-tidy  .zenodo.json  CMakeLists.txt  README.md  license.txt
.github/workflows/: clangtidy.yml  cuda.yml  cudaLocal.yml  hip.yml  linux.yml  macos.yml  source.yml  windows.yml
.github/workflows/setup/: hip.sh  nvcc.sh  ubuntu.sh  ubuntu_clang.sh  ubuntu_ompi.sh
.github/workflows/source/: buildDoxygen
cmake/: HiPACEFunctions.cmake
cmake/dependencies/: AMReX.cmake  openPMD.cmake
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/building/: building.rst  hpc.rst
docs/source/run/: get_started.rst  parameters.rst
examples/beam_in_vacuum/: analysis_RR.py
examples/blowout_wake/: analysis_histogram.py  inputs_histogram_normalized
examples/gaussian_weight/: analysis.py
examples/get_started/: inputs_lwfa  inputs_mesh_refinement  inputs_normalized  inputs_pwfa
examples/laser_STC/: analysis_laser_STC.py  inputs_STC
examples/laser_ionization/: analysis_laser_ionization.py  inputs_laser_ionization
examples/plasma_initialization/: inputs_SI_plasma_from_file
examples/plasma_ionization/: analysis_plasma_ionization.py  inputs_plasma_ionization
src/: Hipace.H  Hipace.cpp
src/diagnostics/: Diagnostic.H  Diagnostic.cpp  OpenPMDWriter.H  OpenPMDWriter.cpp
src/fields/: Fields.H  Fields.cpp
src/fields/fft_poisson_solver/: CMakeLists.txt  FFTPoissonSolver.H  FFTPoissonSolver.cpp  FFTPoissonSolverDirichletDirect.H  FFTPoissonSolverDirichletDirect.cpp  FFTPoissonSolverDirichletQuick.H  FFTPoissonSolverDirichletQuick.cpp
src/fields/fft_poisson_solver/fft/: AnyFFT.H  WrapCuFFT.cpp  WrapFFTW.cpp  WrapRocFFT.cpp
src/laser/: Laser.H  Laser.cpp  MultiLaser.H  MultiLaser.cpp
src/mg_solver/: HpMultiGrid.H  HpMultiGrid.cpp
src/particles/beam/: BeamParticleContainer.H  BeamParticleContainer.cpp  BeamParticleContainerInit.cpp  MultiBeam.H  MultiBeam.cpp
src/particles/collisions/: ComputeTemperature.H  CoulombCollision.H  CoulombCollision.cpp  ElasticCollisionPerez.H  UpdateMomentumPerez.H
src/particles/deposition/: BeamDepositCurrent.cpp  CMakeLists.txt  DepositionUtil.H  ExplicitDeposition.cpp  HistogramDeposition.H  HistogramDeposition.cpp  PlasmaDepositCurrent.H  PlasmaDepositCurrent.cpp  TemperatureDeposition.H  TemperatureDeposition.cpp
src/particles/particles_utils/: FieldGather.H  ParticleUtil.H  ShapeFactors.H
src/particles/plasma/: MultiPlasma.H  MultiPlasma.cpp  PlasmaParticleContainer.H  PlasmaParticleContainer.cpp  PlasmaParticleContainerInit.cpp
src/particles/profiles/: GetInitialDensity.H  GetInitialDensity.cpp
src/particles/pusher/: BeamParticleAdvance.cpp  GetAndSetPosition.H  PlasmaParticleAdvance.H  PlasmaParticleAdvance.cpp  PushPlasmaParticles.H
src/particles/sorting/: BoxSort.H  BoxSort.cpp  SliceSort.cpp
src/salame/: Salame.H  Salame.cpp
src/utils/: AdaptiveTimeStep.H  AdaptiveTimeStep.cpp  CMakeLists.txt  Constants.H  GPUUtil.H  GridCurrent.H  GridCurrent.cpp  GridIonization.H  GridIonization.cpp  IOUtil.H  IOUtil.cpp  MultiBuffer.H  MultiBuffer.cpp  Parser.H  Parser.cpp
tests/: Poisson_even.1Rank.sh  Poisson_odd.1Rank.sh  histogram.2Rank.sh  laser_STC.1Rank.sh  laser_evolution.SI.2Rank.sh  laser_ionization.1Rank.sh  mesh_refinement.SI.2Rank.sh  plasma_density_from_file.SI.1Rank.sh  plasma_ionisation_p_lev.1Rank.sh  production_lwfa.SI.2Rank.sh  production_pwfa.SI.2Rank.sh  salame.SI.1Rank.sh
tests/checksum/: reset_all_benchmarks.sh
tests/checksum/benchmarks_json/: Poisson_even.1Rank.json  Poisson_odd.1Rank.json  adaptive_time_step.1Rank.json  beam_evolution.1Rank.json  beam_in_vacuum.SI.1Rank.json  beam_in_vacuum.SI.Serial.json  beam_in_vacuum.normalized.1Rank.json  beam_in_vacuum.normalized.Serial.json  beam_in_vacuum_open_boundary.normalized.1Rank.json  blowout_wake.2Rank.json  blowout_wake.Serial.json  blowout_wake_explicit.2Rank.json  collisions.SI.1Rank.json  collisions_beam.SI.1Rank.json  gaussian_linear_wake.SI.1Rank.json  gaussian_linear_wake.normalized.1Rank.json  gaussian_weight.1Rank.json  grid_current.1Rank.json  histogram.2Rank.json  ion_motion.SI.1Rank.json  ionization.2Rank.json  laser_blowout_wake_explicit.1Rank.json  laser_blowout_wake_explicit.SI.1Rank.json  laser_evolution.SI.2Rank.json  laser_ionization.1Rank.json  linear_wake.SI.1Rank.json  linear_wake.normalized.1Rank.json  mesh_refinement.SI.2Rank.json  plasma_density_from_file.SI.1Rank.json  production.SI.2Rank_pwfa.json  production_lwfa.SI.2Rank.json  production_pwfa.SI.2Rank.json  radiation_reaction.1Rank.json  reset.2Rank.json  salame.SI.1Rank.json  transverse_benchmark.1Rank.json
tools/: pyproject.toml  read_insitu_diagnostics.py  runClangTidy.sh  write_plasma_density.py  write_plasma_density_rz.py
